--- a/index.html
+++ b/index.html
@@ -5,13 +5,22 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <meta name="description" content="this is where you make a brief description">
         <meta name="keywords" content="describe, content, keywords">
-        <title>Volta Forside</title>
+        <title>Animal Crossing</title>
         <link rel="stylesheet" href="style.css">
         
     </head>
 
     <header>
-        
+        <img src="./images/aclogo.png" alt="">
+        <nav>
+            <ul>
+                <li>
+                    <a href="">Store</a>
+                    <a href="">About</a>
+                    <a href="">Login</a>
+                </li>
+            </ul>
+        </nav>
     </header>
 
     <main>
