--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <meta name="description" content="this is where you make a brief description">
         <meta name="keywords" content="describe, content, keywords">
-        <title>Volta Forside</title>
+        <title>Animal Crossing</title>
         <link rel="stylesheet" href="style.css">
-        
     </head>
 
     <header>
@@ -16,7 +15,7 @@
 <body>
     <div class="login-page">
         <div class="form">
-            <h3>Log ind på Animal Crossing</h3>
+            <h3 style="color:#E08734;">Log ind på Animal Crossing</h3>
           <form class="register-form">
             <input type="text" placeholder="name"/>
             <input type="password" placeholder="password"/>
@@ -27,7 +26,7 @@
             <input type="text" placeholder="Brugernavn"/>
             <input type="password" placeholder="Kodeord"/>
             <button>login</button>
-            <p class="message">Opret en bruger<a href="#">her</a></p>
+            <p class="message">Opret en bruger <a href="#">her</a></p>
           </form>
         </div>
       </div>
